changed default server port to 8090

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/maziwa
 spring.datasource.username=samuel
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.password=7924
+server.port=8090
 spring.main.allow-circular-references=true
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
